# pi-gpx-camera

./: .gitignore  README.md  main.py  notes.md  pyproject.toml  runserver.sh
dev/: FocuserExample.py  capture_mjpeg_timestamp.py  capture_stream_udp.py  dual_encode.py  dual_encode_2.py  ffmpeg-encode.py  getip.py  mjpeg_server.py  mjpeg_server_2.py  mjpeg_server_record.py  read_avi.py  runqoi.py  still_during_video.py
scratch/: capture_mjpeg.py  capture_mjpeg_timestamp.py  capture_mjpeg_v4l2.py  mjpeg_server_2.py
scripts/: filemanager.service  runserver.service  servegpx.sh  setup-service.sh
src/file_manager/: run.py
src/file_manager/sources/: handlers.py  utils.py
src/file_manager/templates/: file-module.html
src/gpx_cam/: __init__.py  center.html  config.json  index copy.html  index.html  server.py  server_gpx.py
src/gpx_cam/modules/: handlers.py  logging.py  utils.py
src/gpx_cam/modules/classes/: cameraState.py  config.py  configHandler.py  ffmpegOutput.py  gauge.py  mavlinkMessages.py  runtimeState.py  streamingOutput.py
src/gpx_cam/static/css/: styles.css
src/gpx_cam/static/javascript/: gauge.js  main.js  record.js  spinner.js  status.js  videoInput.js  xhr.js
src/gpx_cam/templates/: focus.html  index.html  parameters.html  thumbnail.html
